--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,11 @@ form {
   font-size: 16px;
 }
 
+.hint {
+  color: rgb(126, 67, 77);
+  padding-left: 7px;
+}
+
 .poem {
   font-size: 16px;
   background-color: #fff;
@@ -65,8 +70,21 @@ form {
   box-shadow: 0px 20px 60px rgba(39, 33, 66, 0.3);
 }
 
+.hidden {
+  display: none;
+}
+
 footer {
   text-align: center;
   font-size: 13px;
   margin-top: 30px;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+.blink {
+  animation: blink 1s step-start 0s infinite;
 }
